# kkgbdt

./: README.md  pyproject.toml  setup.py
docs/: report_colsample.md
kkgbdt/: __init__.py  callbacks.py  check.py  com.py  dataset.py  functions.py  loss.py  model.py  numpy.py  trace.py  tune.py
kkgbdt/util/: __init__.py  com.py
tests/: README.md  compare_parameters.py  compare_plot.py  exp_datasets.py  run_pure_gbdt.py  test_dumpload.py  tests.sh  train_cat_cls.py  train_cat_rank.py  train_cat_reg.py  train_dataset.py  train_lgb_cls.py  train_lgb_multi_class.py  train_lgb_multi_task.py  train_lgb_rank.py  train_lgb_reg.py  train_lgb_regression.py  train_lgb_tree_structure.py  train_multi_class.py  train_xgb_cls.py  train_xgb_multi_class.py  train_xgb_multi_class_gpu.py  train_xgb_rank.py  train_xgb_reg.py  tune_cat_parameter.py  tune_lgb_parameter.py  tune_xgb_parameter.py  ui.py
