[project]
name = "kkgbdt"
version = "1.4.13"
requires-python = ">= 3.12.2"
description = "my GBDT (Gradient Boosting Decision Tree) liblary. Supported LightGBM, XGBoost, and CatBoost."
dependencies = [
    'kklogger @ git+https://github.com/kazukingh01/kklogger.git@f6ddcc099da0102a14a62d67bede1b1c30eaf839',
    'kktestdata @ git+https://github.com/kazukingh01/kktestdata.git@100a6f6be036c420bee376c060ece497104e1998',
    'pandas==2.2.3',
    'numpy==2.2.1',
    'optuna==4.1.0',
    'xgboost==3.1.2', # 2.1.3 has bug. The program crashes with the following error when the training with 'multi_output_tree' finishes. "terminate called without an active exception"
    'lightgbm>=4.6.0,<4.6.1',
    'catboost==1.2.8',
    'scikit-learn==1.7.2',
    'scipy==1.14.1',
    'joblib==1.4.2',
    'findiff==0.12.1',
    'optuna-dashboard==0.19.0',
    'streamlit==1.51.0',
    'wandb==0.23.1',
    'weave==0.52.22',
]

[project.optional-dependencies]
polars = ["polars>=1.15.0"]

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kkgbdt"]
